Another try to fix the background image issue on ios

--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -2,7 +2,7 @@
 .header {
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/AdobeStock_sunrise2.jpg);
-    background-size: cover;
+    background-size: 100vmax 100vmax;
     background-position: center center;
     background-attachment: fixed;
 }
